# truck-trip-planner-back

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: test.yml
config/: settings.py  urls.py
trips/: urls.py  views.py
trips/models/: route_request.py  test_route_request.py
trips/services/: ors.py
trips/utils/: hos_calculator.py  test_hos_calculator.py
