[project]
name = "truck-trip-planner-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.13",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
